@@ -34,7 +34,6 @@ class TestStatement implements Statement {
     private final Statement delegate;
 
     private boolean isGetConnectionSupported;
-    private boolean isGetUpdateCountSupported;
     private int unsupportedThrownCount;
 
     private Connection connection;
@@ -43,7 +42,6 @@ class TestStatement implements Statement {
         this.delegate = delegate;
         this.unsupportedThrownCount = 0;
         this.isGetConnectionSupported = true;
-        this.isGetUpdateCountSupported = true;
     }
 
     private void unsupportedCheck(boolean isFeatureSupported) throws SQLException {
@@ -57,10 +55,6 @@ class TestStatement implements Statement {
         this.isGetConnectionSupported = supported;
     }
 
-    public void setGetUpdateCountSupported(boolean supported) {
-        this.isGetUpdateCountSupported = supported;
-    }
-
     int getUnsupportedThrownCount(){
         return unsupportedThrownCount;
     }
@@ -68,7 +62,6 @@ class TestStatement implements Statement {
     void setConnection(Connection connection) {
         this.connection = connection;
     }
-
 
     public ResultSet executeQuery(String sql) throws SQLException {
         return delegate.executeQuery(sql);
@@ -135,7 +128,6 @@ class TestStatement implements Statement {
     }
 
     public int getUpdateCount() throws SQLException {
-        unsupportedCheck(isGetUpdateCountSupported);
         return delegate.getUpdateCount();
     }
 
